force-app/main/default/objects/Checklist_ativo__c/Checklist_ativo__c.object-meta.xml
<CustomObject>
    <description>Objeto dedicado a verificar os ativos de um colaborador  em uma movimentação de pessoa</description>
    <label>Checklist do Ativo</label>
    <nameField>
        <label>Nome de Check List do Ativo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist dos ativos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>