force-app/main/default/objects/Checklist_ativo__c/fields/Ativo_conforme__c.field-meta.xml
<CustomField>
    <fullName>Ativo_conforme__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checklist que identifica se o ativo está avariado, quebrado ou fora dos padrões aceitáveis para uso posterior (não conforme) ou se está em boas condições (conforme).</description>
    <inlineHelpText>Checklist que identifica se o ativo está avariado, quebrado ou fora dos padrões aceitáveis para uso posterior (não conforme) ou se está em boas condições (conforme).</inlineHelpText>
    <label>Ativo conforme?</label>
    <type>Checkbox</type>
</CustomField>