force-app/main/default/objects/Checklist_ativo__c/fields/categoria__c.field-meta.xml
<CustomField>
    <fullName>categoria__c</fullName>
    <formula>TEXT(Ativo__r.Categoria_Patrimonial__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoria Patrimonial</label>
    <type>Text</type>
</CustomField>