force-app/main/default/objects/Checklist_ativo__c/fields/Departamento_Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Departamento_Responsavel__c</fullName>
    <formula>CASE(
  categoria__c,
  &quot;COMPUTADORES E PERIFÉRICOS&quot;, &quot;Desenvolvimento&quot;,
  &quot;CELULARES&quot;, &quot;Desenvolvimento&quot;,
  &quot;VEÍCULOS&quot;, &quot;Compras&quot;,
  &quot;EQUIPAMENTO DE DEMONSTRAÇÃO&quot;, &quot;Educação&quot;,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departamento Responsavel</label>
    <type>Text</type>
</CustomField>