force-app/main/default/objects/Checklist_ativo__c/fields/Observa_es_do_ativo__c.field-meta.xml
<CustomField>
    <fullName>Observa_es_do_ativo__c</fullName>
    <formula>Ativo__r.Observa_es__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Observações do ativo</label>
    <type>Text</type>
</CustomField>