force-app/main/default/objects/Checklist_ativo__c/fields/Observa_es_do_ativo_devolvido__c.field-meta.xml
<CustomField>
    <fullName>Observa_es_do_ativo_devolvido__c</fullName>
    <inlineHelpText>Em caso de ativo Não Conforme, por favor, especifique o motivo neste campo.</inlineHelpText>
    <label>Observações do ativo (Devolução)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>