force-app/main/default/objects/Checklist_ativo__c/fields/Registro_atual__c.field-meta.xml
<CustomField>
    <fullName>Registro_atual__c</fullName>
    <formula>Id = Movimenta_o_de_Pessoas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registro atual</label>
    <type>Checkbox</type>
</CustomField>