force-app/main/default/objects/Checklist_ativo__c/listViews/C_pia_de_Tudo.listView-meta.xml
<ListView>
    <fullName>C_pia_de_Tudo</fullName>
    <columns>NAME</columns>
    <columns>Registro_atual__c</columns>
    <filterScope>Everything</filterScope>
    <label>Teste</label>
</ListView>